@@ -17,6 +17,8 @@ export(queues)
 export(read_raw_sge_accounting)
 export(round_ram)
 export(system_info)
+importFrom(R.cache,loadCache)
+importFrom(R.cache,saveCache)
 importFrom(future,future)
 importFrom(future,plan)
 importFrom(future,value)
